@@ -38,6 +38,7 @@ Included
 - Added readable doctor mode: `weftend adapter doctor --text` (deterministic local guidance, no auto-install/network).
 - Added strict doctor mode: `weftend adapter doctor --strict` (fails closed on invalid policy state or unresolved missing-plugin requirements).
 - Strict doctor JSON output now includes `strict.status` and `strict.reasonCodes` for machine-readable release gating.
+- Added smoke coverage for strict text mode failure path (`adapter doctor --text --strict` returns 40 and emits strict FAIL/reason lines).
 - Added policy writer mode: `weftend adapter doctor --write-policy <path> [--include-missing-plugins]`.
 - Policy writer now uses two-phase finalize (`<path>.stage -> <path>`) and fails closed with explicit write error on output failure.
 - `--include-missing-plugins` now requires `--write-policy` (no more silent no-op flag usage).
